design(study): fix align graph
Former-commit-id: a7670b372059934ef7154eee6bac061921dd6b2c

--- a/front-end/src/styles/pages/study/comp/PoseState.module.scss
+++ b/front-end/src/styles/pages/study/comp/PoseState.module.scss
@@ -1,13 +1,3 @@
-@import '../../../common/mixin';
-@import '../../../common/variables';
-
-.poseState {
-  width: 100%;
-  height: 600px;
-  border: 1px solid $DK_LGRAY;
-  border-radius: 12px;
-  padding: 18px 24px;
-  .title {
-    color: $DK_GRAY;
-  }
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:47be65196ec08f22b63e9c0552f6470064179bd434cdc71807829a8e5a9524a9
+size 295
